Skeleton with versioned modules

--- a/src/_includes/footer.hbs
+++ b/src/_includes/footer.hbs
@@ -1,6 +1,6 @@
 <!-- Footer
 ================================================== -->
-<footer class="bs-footer">
+<footer class="bs-footer footer">
 
     <p>&copy; Taskurotta Team 2013</p>
 
