--- a/src/app/get_started/get_started.hbs
+++ b/src/app/get_started/get_started.hbs
@@ -1,11 +1,11 @@
 ---
-layout: default.hbs
-title: План
-app: road_map
-tags:
-- markdown
-- navigation
-
+title: Введение
+app: get_started
+mods:
+    - name: markdown
+      version: 0.1.0
+    - name:  navigation
+      version: 0.1.0
 ---
 
 <!-- Page content -->
