--- a/src/app/index/index.hbs
+++ b/src/app/index/index.hbs
@@ -1,10 +1,11 @@
 ---
 layout: home.hbs
 app: index
-tags:
-- markdown
-- navigation
-
+mods:
+  - name: markdown
+    version: 0.1.0
+  - name:  navigation
+    version: 0.1.0
 ---
 
 
