--- a/src/app/road_map/road_map.hbs
+++ b/src/app/road_map/road_map.hbs
@@ -1,10 +1,11 @@
 ---
-layout: default.hbs
-title: Введение
-app: get_started
-tags:
-- markdown
-- navigation
+title: План
+app: road_map
+mods:
+  - name: markdown
+    version: 0.1.0
+  - name:  navigation
+    version: 0.1.0
 ---
 
 <!-- Page content -->
