Skeleton with versioned modules, navigation and footer in directives

--- a/src/app/get_started/get_started.hbs
+++ b/src/app/get_started/get_started.hbs
@@ -2,9 +2,13 @@
 title: Введение
 app: get_started
 mods:
+    - name: app
+      version: 0.1.0
     - name: markdown
       version: 0.1.0
     - name:  navigation
+      version: 0.1.0
+    - name:  footer
       version: 0.1.0
 ---
 
