--- a/src/_includes/navbar.hbs
+++ b/src/_includes/navbar.hbs
@@ -1,4 +1,4 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner" ui-view="navBar"></div>
+    <div class="navbar-inner" navigation></div>
 </div>
 
