--- a/src/app/index/index.hbs
+++ b/src/app/index/index.hbs
@@ -2,10 +2,14 @@
 layout: home.hbs
 app: index
 mods:
-  - name: markdown
-    version: 0.1.0
-  - name:  navigation
-    version: 0.1.0
+    - name: app
+      version: 0.1.0
+    - name: markdown
+      version: 0.1.0
+    - name:  navigation
+      version: 0.1.0
+    - name:  footer
+      version: 0.1.0
 ---
 
 
