--- a/src/app/road_map/road_map.hbs
+++ b/src/app/road_map/road_map.hbs
@@ -2,10 +2,14 @@
 title: План
 app: road_map
 mods:
-  - name: markdown
-    version: 0.1.0
-  - name:  navigation
-    version: 0.1.0
+    - name: app
+      version: 0.1.0
+    - name: markdown
+      version: 0.1.0
+    - name:  navigation
+      version: 0.1.0
+    - name:  footer
+      version: 0.1.0
 ---
 
 <!-- Page content -->
