--- a/src/mod/navigation/0.1.0/views/navigation.html
+++ b/src/mod/navigation/0.1.0/views/navigation.html
@@ -1,4 +1,4 @@
-    <div class="container" ng-controller="navigationCtrl">
+    <div class="container">
         <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
