Доработаны скрипты гранта:  - добавлена проверка javascript кода jshint,  - контекация, минификация,   - выделен отдельный каталог для build) Реализовано конфигурирования компонентов mod извне, через angular.provider и angular.config

--- a/src/_includes/navbar.hbs
+++ b/src/_includes/navbar.hbs
@@ -1,4 +1,4 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner" navigation></div>
+    <div class="navbar-inner" navigation="{{app}}"></div>
 </div>
 
