--- a/src/_includes/scripts.hbs
+++ b/src/_includes/scripts.hbs
@@ -15,11 +15,11 @@
 <script src="vendor/jquery/jquery.js"></script>
 <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
 {{#if app}}
-<script src="app/{{app}}/scripts/app.min.js"></script>
+<script src="app/{{app}}/scripts/app.js"></script>
 {{/if}}
 
 {{#if mods}}
 {{#mods}}
-<script src="mod/{{mod.name}}/{{mod.version}}/scripts/mod.min.js"></script>
+<script src="mod/{{mod.name}}/{{mod.version}}/scripts/mod.js"></script>
 {{/mods}}
 {{/if}}
