--- a/src/app/road_map/road_map.hbs
+++ b/src/app/road_map/road_map.hbs
@@ -15,9 +15,7 @@ mods:
 <!-- Page content -->
 <div class="row">
     <div class="span3 col-lg-3">
-        <div class="bs-sidebar">
-            <ul class="nav bs-sidenav" ui-view="sideBar">
-            </ul>
+        <div class="bs-sidebar" ui-view="sideBar">
         </div>
     </div>
     <!-- Doc content -->
