--- a/src/mod/navigation/0.1.0/views/navigation.html
+++ b/src/mod/navigation/0.1.0/views/navigation.html
@@ -6,9 +6,9 @@
         </button>
         <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-                <li id="{{item.id}}" ng-repeat="item in menu.items" class="dropdown">
-                    <a href="{{item.href}}" ng-hide="hasChild(item)">{{item.name}}</a>
-                    <a href="{{item.href}}" ng-show="hasChild(item)" class="dropdown-toggle" data-toggle="dropdown">{{item.name}}</a>
+                <li id="{{item.id}}" ng-repeat="item in navigation.menu.items" ng-class="{active: isActive(item), dropdown: hasChild(item)}">
+                    <a href="{{item.href}}" ng-hide="hasChild(item)" ng-class="{active: isActive(item)}">{{item.name}}</a>
+                    <a href="{{item.href}}" ng-show="hasChild(item)" ng-class="{active: isActive(item), 'dropdown-toggle':true}" data-toggle="dropdown">{{item.name}}</a>
                     <ul class="dropdown-menu" ng-show="hasChild(item)">
                         <li id="{{child.id}}"><a href="{{child.href}}" ng-repeat="child in item.items">{{child.name}}</a></li>
                     </ul>
