Созадана функция для контекации js файлов и html2js

--- a/src/_includes/scripts.hbs
+++ b/src/_includes/scripts.hbs
@@ -9,6 +9,7 @@
 <!--<script src="{{assets}}/js/highlight.js"></script>-->
 <!--<script src="{{assets}}/js/application.js"></script>-->
 
+<script src="vendor/script.js/dist/script.js"></script>
 <script src="vendor/angular/angular.js"></script>
 <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="vendor/showdown/compressed/showdown.js"></script>
@@ -24,3 +25,5 @@
 <script src="mod/{{mod.name}}/{{mod.version}}/scripts/mod-templates.js"></script>
 {{/mods}}
 {{/if}}
+
+
