Динамическая подгрузка настроек из YAML и внедрение их в модули через провайдеры

--- a/src/_includes/scripts.hbs
+++ b/src/_includes/scripts.hbs
@@ -9,12 +9,16 @@
 <!--<script src="{{assets}}/js/highlight.js"></script>-->
 <!--<script src="{{assets}}/js/application.js"></script>-->
 
+<script src="vendor/jquery/jquery.js"></script>
+<script src="vendor/js-yaml/js-yaml.js"></script>
 <script src="vendor/script.js/dist/script.js"></script>
 <script src="vendor/angular/angular.js"></script>
-<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="vendor/bower-angular-ui-router/angular-ui-router.js"></script>
 <script src="vendor/showdown/compressed/showdown.js"></script>
-<script src="vendor/jquery/jquery.js"></script>
 <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
+<!-- bower:js -->
+<!-- endbower -->
+
 {{#if app}}
 <script src="app/{{app}}/scripts/app.js"></script>
 <script src="app/{{app}}/scripts/app-templates.js"></script>
