--- a/src/app/road_map/road_map.hbs
+++ b/src/app/road_map/road_map.hbs
@@ -2,7 +2,7 @@
 title: План
 app: road_map
 mods:
-    - name: app
+    - name: core
       version: 0.1.0
     - name: markdown
       version: 0.1.0
