--- a/src/app/get_started/get_started.hbs
+++ b/src/app/get_started/get_started.hbs
@@ -2,7 +2,7 @@
 title: Введение
 app: get_started
 mods:
-    - name: app
+    - name: core
       version: 0.1.0
     - name: markdown
       version: 0.1.0
