--- a/src/app/index/index.hbs
+++ b/src/app/index/index.hbs
@@ -2,7 +2,7 @@
 layout: home.hbs
 app: index
 mods:
-    - name: app
+    - name: core
       version: 0.1.0
     - name: markdown
       version: 0.1.0
