Поддержка версионности компонент в  config.yml

--- a/template/src/_includes/scripts.hbs
+++ b/template/src/_includes/scripts.hbs
@@ -4,14 +4,10 @@
 {{#if production}}
 <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 {{/if}}
-{{#if app}}
-{{#app.libs}}<script src="{{.}}"></script>
-{{/app.libs}}
-{{#app.urls}}<script src="{{.}}"></script>
-{{/app.urls}}
-{{#app.mods}}<script src="{{.}}"></script>
-{{/app.mods}}
-{{/if}}
+{{#settings.vendors}}<script src="{{.}}"></script>
+{{/settings.vendors}}
+{{#settings.scripts}}<script src="{{.}}"></script>
+{{/settings.scripts}}
 
 
 
