--- a/template/src/_layouts/home.hbs
+++ b/template/src/_layouts/home.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="{{ app.name }}">
+<html lang="en" ng-app="app">
 <head>
     {{> header }}
     <!-- JS  -->
