Для приложения "Документация" добавил динамическую смену Markdown документов в правой части по клику на пункт меню в sideBar

--- a/apps/src/app/documentation/views/sidebar.html
+++ b/apps/src/app/documentation/views/sidebar.html
@@ -1,5 +1,10 @@
 <ul class="nav nav-list bs-docs-sidenav" data-spy="affix">
-    <li><a href="#documentation"><i class="icon-chevron-right"></i> Документация</a></li>
-    <li><a href="#chapter1"><i class="icon-chevron-right"></i> Глава 1</a></li>
+    <li><a href="#intro"><i class="icon-chevron-right"></i> Введение</a></li>
+    <li>
+        <a href="#deployment_common"><i class="icon-chevron-down"></i> Варианты развертывания системы</a>
+        <ul class="nav nav-list bs-docs-sidenav" data-spy="affix">
+            <a href="#deployment_1"><i class="icon-chevron-right"></i> Вариант №1</a>
+        </ul>
+    </li>
 
 </ul>
