--- a/apps/src/app/documentation/views/sidebar.html
+++ b/apps/src/app/documentation/views/sidebar.html
@@ -1,9 +1,13 @@
-<ul class="nav nav-list bs-docs-sidenav" data-spy="affix">
+<ul class="nav nav-list bs-docs-sidenav">
     <li><a href="#intro"><i class="icon-chevron-right"></i> Введение</a></li>
     <li>
         <a href="#deployment_common"><i class="icon-chevron-down"></i> Варианты развертывания системы</a>
-        <ul class="nav nav-list bs-docs-sidenav" data-spy="affix">
-            <a href="#deployment_1"><i class="icon-chevron-right"></i> Вариант №1</a>
+        <ul class="nav nav-list">
+            <li><a href="#deployment_dev"><i class="icon-chevron-right"></i> Окружение разработчика</a></li>
+            <li><a href="#deployment_memory"><i class="icon-chevron-right"></i> RESTfull-транспорт и хранилище в памяти</a></li>
+            <li><a href="#deployment_hz"><i class="icon-chevron-right"></i> RESTfull-транспорт и хранилище в Hazelcast</a></li>
+            <li><a href="#deployment_hz_mongo"><i class="icon-chevron-right"></i> RESTfull-транспорт и хранилище в Hazelcast и MongoDB</a></li>
+            <li><a href="#deployment_hz_mongo_ora"><i class="icon-chevron-right"></i> RESTfull-транспорт и хранилище в Hazelcast, MongoDB и Oracle</a></li>
         </ul>
     </li>
 
