Добавил описание конфигурации окружения разработчика

--- a/apps/src/app/index/views/content.html
+++ b/apps/src/app/index/views/content.html
@@ -1,19 +1,19 @@
-<div class="span4">
-    <h2>Вышла пре-альфа</h2>
-    <p>26 февраля вышла пре-альфа версия продукта. По случаю, добавлен план.</p>
-    <p><a class="btn" href="road_map.html">План &raquo;</a></p>
-</div>
-<div class="span4">
-    <h2>Первый запуск</h2>
-    <p>14 февраля, в 18 часов 30 минут произведен старт ракетоносителя с Первым исскуственным спутником земли
-        (ws-example). Спутник успешно облетел землю и вернулся на базу. Логи приборов показали штатный режим
-        работы. Урааа! :)
+<div>
+    <p>
+        Taskurotta uses Hazelcast Framework for creating shared memory and runtime environment between Taskurotta servers. This framework allow us create transparent scalability. All nodes has auto-discovery feature which helps register new node and distribute memory from other nodes on this node.
     </p>
-    <p><a class="btn" href="get_started.html">Введение &raquo;</a></p>
-    <!--<p><a class="btn" href="#">View details &raquo;</a></p>-->
-</div>
-<div class="span4">
-    <h2>Начаты работы</h2>
-    <p>Жили-были и когда-то очень давно... SWF или откуда ноги растут.</p>
-    <p><a class="btn" href="http://aws.amazon.com/swf/">SWF &raquo;</a></p>
+
+    <p>
+        Main features:
+    <ul>
+        <li>Dynamic process creation</li>
+        <li>Simple run and control of processes</li>
+        <li>Reusable Actors in processes(Workers and Coordinators)</li>
+        <li>Regression tests based on actors and archive data</li>
+        <li>Handy creation of actors</li>
+        <li>Handy scalability of actors and servers</li>
+        <li>Fault-tolerance and load-balancing</li>
+        <li>Process Scheduler</li>
+    </ul>
+    </p>
 </div>
