--- a/apps/src/app/index/views/hero.html
+++ b/apps/src/app/index/views/hero.html
@@ -1,7 +1,4 @@
 <h1>Taskurotta</h1>
-<p>Taskurotta is based on <a href="http://aws.amazon.com/swf/">Amazon SWF ideology</a>. Common idea that you need concentrate only on business logic.
-    All business-logic should be implemented in reusable components - «Workers».
-    Workers can be organized to work in one JVM instance or in different JVM instances.
-    This is very flexible solution which can be used for fault-tolerance or load-balancing.
+<p>Taskurotta - Distributed process runtime enviroment
 </p>
 <p><a href="road_map.html" class="btn btn-primary btn-large">More info &raquo;</a></p>
