--- a/apps/src/app/index/views/content.html
+++ b/apps/src/app/index/views/content.html
@@ -1,6 +1,7 @@
 <div>
     <p>
-        Taskurotta uses <a href="http://www.hazelcast.com/">Hazelcast Framework</a> for creating shared memory and runtime environment between Taskurotta servers. This framework allow us create transparent scalability. All nodes has auto-discovery feature which helps register new node and distribute memory from other nodes on this node.
+        Taskurotta uses <a href="http://www.hazelcast.com/">Hazelcast Framework</a> for creating shared memory and runtime environment between Taskurotta servers. This framework allows us to create transparent scalability.
+        All nodes have auto-discovery feature which helps to register new node and distribute memory from one node to another.
     </p>
 
     <p>
