--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,92 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="/ico/favicon.png">
+{% include header.html %}
 
-    <title>Taskurotta - {{page.title}}</title>
+{% include nav.html %}
 
-    <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+{{ content }}
 
-    <!-- Custom styles for this template -->
-    <link href="/css/navbar.css" rel="stylesheet">
-
-    <!-- Code highlights -->
-    <link rel="stylesheet" href='/css/syntax.css' type="text/css" media="all"/>
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="/js/html5shiv.3.7.0.js"></script>
-    <script src="/js/respond.min.1.3.0.js"></script>
-    <![endif]-->
-</head>
-
-<body>
-
-<div class="container">
-
-    {% include nav.html %}
-
-    {{ content }}
-
-</div>
-<!-- /container -->
-
-<!-- Footer
-================================================== -->
-<footer class="bs-footer" role="contentinfo">
-    <div class="container">
-        <div class="bs-social">
-            <ul class="bs-social-buttons">
-                <li>
-                    <iframe class="github-btn"
-                            src="http://ghbtns.com/github-btn.html?user=taskurotta&amp;repo=taskurotta&amp;type=watch&amp;count=true" width="100" height="20" title="Star on GitHub"></iframe>
-                </li>
-                <li>
-                    <iframe class="github-btn"
-                            src="http://ghbtns.com/github-btn.html?user=taskurotta&amp;repo=taskurotta&amp;type=fork&amp;count=true" width="102" height="20" title="Fork on GitHub"></iframe>
-                </li>
-                <li class="follow-btn">
-                    <a href="https://twitter.com/taskurotta" class="twitter-follow-button" data-link-color="#0069D6"
-                       data-show-count="true">Follow @taskurotta</a>
-                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                </li>
-                <li class="tweet-btn">
-                    <a href="https://twitter.com/share" class="twitter-share-button"
-                       data-url="http://taskurotta.org/" data-count="horizontal" data-via="taskurotta"
-                       data-related="mdo:Creator of Taskurotta">Tweet</a>
-                </li>
-            </ul>
-        </div>
-
-
-        <p><a href="https://github.com/taskurotta/taskurotta">Code</a> licensed under
-            <a href="http://opensource.org/licenses/MIT" target="_blank">The MIT License</a>,
-            documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-        <ul class="footer-links">
-            <li>Currently v0.3.1</li>
-            <li class="muted">&middot;</li>
-            <li><a href="/doc/">Documentation</a></li>
-            <li class="muted">&middot;</li>
-            <li><a href="/blog/">Blog</a></li>
-            <li class="muted">&middot;</li>
-            <li><a href="https://github.com/taskurotta/taskurotta/issues?state=open">Issues</a></li>
-            <li class="muted">&middot;</li>
-            <li><a href="https://github.com/taskurotta/taskurotta/releases">Releases</a></li>
-        </ul>
-    </div>
-</footer>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="/js/jquery-1.10.2.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/application.js"></script>
-</body>
-</html>
+{% include footer.html %}
