Added v0.4.0 release notes

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -56,7 +56,7 @@
                         <li><a href="http://stackoverflow.com/">StackOverflow</a></li>
                         <li><a href="https://groups.google.com/forum/#!forum/taskurotta">Mailing list</a></li>
                         <li class="divider"></li>
-                        <li><a href="https://github.com/taskurotta/taskurotta.js/issues">Bug Reports (Issues)</a></li>
+                        <li><a href="https://github.com/taskurotta/taskurotta/issues">Bug Reports (Issues)</a></li>
                     </ul>
                 </li>
             </ul>
