--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,12 @@
     <script src="/js/html5shiv.3.7.0.js"></script>
     <script src="/js/respond.min.1.3.0.js"></script>
     <![endif]-->
+    
+    <script type="text/javascript" src="js/syntaxhighlight/shCore.js"></script>
+    <script type="text/javascript" src="js/syntaxhighlight/shBrushJScript.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/syntaxhighlight/shCoreDefault.css"/>
+    <script type="text/javascript">SyntaxHighlighter.all();</script>
+
 </head>
 
 <body>
